--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,40 @@ html {
   text-size-adjust: 100%;
   box-sizing: border-box;
   font-family: "Georgia", serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  text-align: center;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+}
+
 h2 {
+  text-align: left;
+  padding-left: .3em;
   font-family: "Denk One", sans-serif;
+  margin: 0;
+  background-color: #e2e2e2;
+}
+
+p{
+  text-align: left;
+  padding: 1em 0 1em .5em;
+  background-color: #e2e2e2;
+  margin: 0;
+  font-size: 100%;
+  line-height: 1.3;
 }
