--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,11 @@ html {
 
 body {
   text-align: center;
+  margin: 0;
 }
 
-img {
-  display: block;
-  width: 100%;
+figure {
+  margin: 0;
 }
 
 .img-flex {
@@ -35,7 +35,7 @@ img {
 
 h2 {
   text-align: left;
-  padding-left: .3em;
+  padding: 1em 0 0 .3em;
   font-family: "Denk One", sans-serif;
   margin: 0;
   background-color: #e2e2e2;
