--- a/css/main.css
+++ b/css/main.css
@@ -49,3 +49,36 @@ p{
   font-size: 100%;
   line-height: 1.3;
 }
+
+@media only screen and (min-width: 38em) {
+
+figure {
+  position: relative;
+}
+
+figcaption {
+  width: 50%;
+  position: absolute;
+  bottom: 1.5em;
+  right: 1.5em;
+}
+
+h2 {
+  background-color: rgba(0, 0, 0, .3);
+  color: #e2e2e2;
+  border-style: solid;
+  border-width: 0;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+p {
+  background-color: rgba(0, 0, 0, .3);
+  color: #e2e2e2;
+  border-style: solid;
+  border-width: 0;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+}
