--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,23 @@ p {
 }
 
 }
+
+@media only screen and (min-width: 38em) {
+
+  figcaption {
+    font-size: 1.5rem;
+    width: 17em;
+    padding-left: 2rem;
+    right: 1em;
+    bottom: 2.5rem;
+  }
+
+  h2 {
+    padding: .9em .4em 0;
+  }
+
+  p {
+    font-size: 1.2rem;
+    padding: .8em .7em 1em .9em;
+  }
+}
