--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,17 @@ p {
 @media only screen and (min-width: 90em) {
 
 figcaption {
+  right: 1.4em;
+  border-radius: 8px;
+  width: 18em;
+}
 
+h2 {
+  font-size: 1.8rem;
+  padding: .9em .6em .5em;
+}
+
+p {
+  padding: .9em .7em 1.7em 1.5em;
 }
 }
