--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-@-moz-viewport { width: device-width, scale: 1; }
-@-ms-viewport { width: device-width, scale: 1; }
-@-o-viewport { width: device-width, scale: 1; }
-@-webkit-viewport { width: device-width, scale: 1; }
-@viewport { width: device-width, scale: 1; }
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; }
 
 html {
   -moz-text-size-adjust: 100%;
@@ -97,7 +97,6 @@ html {
 
 figcaption {
   width: 17em;
-  padding-left: 2rem;
   right: 1em;
   bottom: 2.5rem;
 }
@@ -122,7 +121,8 @@ html {
 figcaption {
   right: 1.4em;
   border-radius: 8px;
-  width: 18em;
+  width: 40%;
+  padding: 0;
 }
 
 h2 {
