--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font-family: "Georgia", serif;
+  font-family: 'Denk One', sans-serif;
   line-height: 1.5;
 }
 
@@ -20,11 +20,6 @@ html {
 }
 
 body {
-  text-align: center;
-  margin: 0;
-}
-
-figure {
   margin: 0;
 }
 
@@ -33,104 +28,6 @@ figure {
   width: 100%;
 }
 
-h2 {
-  text-align: left;
-  padding: 1em 0 0 .3em;
-  font-family: "Denk One", sans-serif;
-  margin: 0;
-  background-color: #e2e2e2;
-}
-
-p{
-  text-align: left;
-  padding: 1em 0 1em .5em;
-  background-color: #e2e2e2;
-  margin: 0;
-  font-size: 100%;
-  line-height: 1.3;
-}
-
-@media only screen and (min-width: 38em) {
-
-html {
-  font-size: 100%;
-  line-height: 1.3;
-}
-
 figure {
-  position: relative;
-}
-
-figcaption {
-  width: 50%;
-  position: absolute;
-  bottom: 1.5em;
-  right: 1.5em;
-}
-
-h2 {
-  background-color: rgba(0, 0, 0, .3);
-  color: #e2e2e2;
-  border-style: solid;
-  border-width: 0;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
-
-p {
-  background-color: rgba(0, 0, 0, .3);
-  color: #e2e2e2;
-  border-style: solid;
-  border-width: 0;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-}
-
-}
-
-@media only screen and (min-width: 60em) {
-
-html {
-  font-size: 110%;
-  line-height: 1.4;
-}
-
-figcaption {
-  width: 17em;
-  right: 1em;
-  bottom: 2.5rem;
-}
-
-h2 {
-  padding: .9em .4em 0;
-}
-
-p {
-  font-size: 1.2rem;
-  padding: .8em .7em 1em .9em;
-}
-}
-
-@media only screen and (min-width: 90em) {
-
-html {
-  font-size: 120%;
-  line-height: 1.5;
-}
-
-figcaption {
-  right: 1.4em;
-  border-radius: 8px;
-  width: 40%;
-  padding: 0;
-}
-
-h2 {
-  font-size: 1.8rem;
-  padding: .9em .6em .5em;
-}
-
-p {
-  padding: .9em .7em 1.7em 1.5em;
-}
+  margin: 0;
 }
